<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center"
    android:background="@color/blue">

    <TextView
        android:id="@+id/game_result_text_view"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        tools:text="@string/win"
        android:gravity="center"
        android:textSize="25sp">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/opponent_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/opponent"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            >
        </TextView>
        <TextView
            android:id="@+id/game_time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/time"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:textColor="@color/white">
        </TextView>
    </LinearLayout>

</LinearLayout>

